--- a/demos/templates/index.twig
+++ b/demos/templates/index.twig
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8"/>
-        <title>Slim 3</title>
+        <title>Webolution</title>
         <link href='//fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'>
         <style>
             body {
@@ -26,13 +26,13 @@
         </style>
     </head>
     <body>
-        <h1>Slim</h1>
-        <div>a microframework for PHP</div>
+        <h1>Webolution</h1>
+        <div>Evolver</div>
 
-        <?php if (isset($name)) : ?>
-            <h2>Hello <?= htmlspecialchars($name); ?>!</h2>
-        <?php else: ?>
-            <p>Try <a href="http://www.slimframework.com">SlimFramework</a>
-        <?php endif; ?>
+        <p><a href="/number_evolution">Number Evolution</a></p>
+        <p><a href="/text_evolution">Text Evolution</a></p>
+        <p><a href="/color_evolution">Color Evolution</a></p>
+        <p><a href="/element_evolution">Element Evolution</a></p>
+        <p><a href="/colour_evolution_interactive">Color Evolution Interactive</a></p>
     </body>
 </html>
