--- a/demos/templates/demos.twig
+++ b/demos/templates/demos.twig
@@ -19,6 +19,7 @@
     </head>
     <body>
         <h1>{{ title }}</h1>
+        <p><a href="/">Home</a></p>
         {{ output|raw }}
     </body>
 </html>
