made some of the evolution of text elements a little better, now takes the goal more into account

--- a/demos/templates/index.twig
+++ b/demos/templates/index.twig
@@ -30,6 +30,7 @@
 
         <p><a href="/number_evolution">Number Evolution</a></p>
         <p><a href="/text_evolution">Text Evolution</a></p>
+        <p><a href="/text_evolution_length">Text Evolution Test With Different Length Goal</a></p>
         <p><a href="/color_evolution">Color Evolution</a></p>
         <p><a href="/element_evolution">Element Evolution</a></p>
         <p><a href="/colour_evolution_interactive">Color Evolution Interactive</a></p>
