--- a/demos/templates/index.twig
+++ b/demos/templates/index.twig
@@ -26,13 +26,16 @@
     </head>
     <body>
         <h1>Webolution</h1>
-        <div>Evolver</div>
 
+        <h2>Evolution</h2>
         <p><a href="/number_evolution">Number Evolution</a></p>
         <p><a href="/text_evolution">Text Evolution</a></p>
         <p><a href="/text_evolution_length">Text Evolution Test With Different Length Goal</a></p>
         <p><a href="/color_evolution">Color Evolution</a></p>
         <p><a href="/element_evolution">Element Evolution</a></p>
         <p><a href="/colour_evolution_interactive">Color Evolution Interactive</a></p>
+
+        <h2>Evolution Storage</h2>
+        <p><a href="/color_evolution_storage">Color Evolution Storage</a></p>
     </body>
 </html>
