finalised the initial draft of the EvolutionStorage class added an admirer route to allow for sqlite database administration within the slim application

--- a/demos/templates/index.twig
+++ b/demos/templates/index.twig
@@ -37,5 +37,8 @@
 
         <h2>Evolution Storage</h2>
         <p><a href="/color_evolution_storage">Color Evolution Storage</a></p>
+
+        <h2>Database</h2>
+        <p><a href="/adminer">Adminer</a></p>
     </body>
 </html>
