tweaked styles on demo pages slightly

--- a/demos/templates/demos.twig
+++ b/demos/templates/demos.twig
@@ -5,6 +5,9 @@
         <title>Webolution</title>
         <link href='//fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'>
         <style>
+            body {
+                margin:10px;
+            }
             h1 {
                 color: #719e40;
                 letter-spacing: -3px;
