--- a/demos/templates/index.twig
+++ b/demos/templates/index.twig
@@ -6,7 +6,7 @@
         <link href='//fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'>
         <style>
             body {
-                margin: 50px 0 0 0;
+                margin: 50px 10px 10px 10px;
                 padding: 0;
                 width: 100%;
                 font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
