added a colour sort test, also added some extra code that ColorIndividual objects could be generated via Color objects

--- a/demos/templates/index.twig
+++ b/demos/templates/index.twig
@@ -40,5 +40,8 @@
 
         <h2>Database</h2>
         <p><a href="/adminer">Adminer</a></p>
+
+        <h2>Tests</h2>
+        <p><a href="/color_sort">Colour Sort Test</a></p>
     </body>
 </html>
