--- a/demos/templates/index.twig
+++ b/demos/templates/index.twig
@@ -43,5 +43,6 @@
 
         <h2>Tests</h2>
         <p><a href="/color_sort">Colour Sort Test</a></p>
+        <p><a href="/element_creation_test">Element Creation Test</a></p>
     </body>
 </html>
