--- a/demos/templates/index.twig
+++ b/demos/templates/index.twig
@@ -40,6 +40,7 @@
 
         <h2>Database</h2>
         <p><a href="/adminer">Adminer</a></p>
+        <p><a href="/clear_database">Clear Database</a></p>
 
         <h2>Tests</h2>
         <p><a href="/color_sort">Colour Sort Test</a></p>
