--- a/demos/templates/index.twig
+++ b/demos/templates/index.twig
@@ -37,6 +37,7 @@
 
         <h2>Evolution Storage</h2>
         <p><a href="/color_evolution_storage">Color Evolution Storage</a></p>
+        <p><a href="/element_evolution_storage">Element Evolution Storage</a></p>
 
         <h2>Database</h2>
         <p><a href="/adminer">Adminer</a></p>
