--- a/demos/templates/index.twig
+++ b/demos/templates/index.twig
@@ -33,6 +33,7 @@
         <p><a href="/text_evolution_length">Text Evolution Test With Different Length Goal</a></p>
         <p><a href="/color_evolution">Color Evolution</a></p>
         <p><a href="/element_evolution">Element Evolution</a></p>
+        <p><a href="/style_evolution">Style Evolution</a></p>
         <p><a href="/colour_evolution_interactive">Color Evolution Interactive</a></p>
 
         <h2>Evolution Storage</h2>
@@ -46,5 +47,6 @@
         <h2>Tests</h2>
         <p><a href="/color_sort">Colour Sort Test</a></p>
         <p><a href="/element_creation_test">Element Creation Test</a></p>
+        <p><a href="/fullpage_test">Full Page Test</a></p>
     </body>
 </html>
