Reworked a few things to add a Page type that will contain elements and other components needed to create a full page of HTML. The Page type will replace the complex Element setup with a more simple object. Also added the Image type to test image based evolution.

--- a/demos/templates/index.twig
+++ b/demos/templates/index.twig
@@ -35,6 +35,7 @@
         <p><a href="/element_evolution">Element Evolution</a></p>
         <p><a href="/style_evolution">Style Evolution</a></p>
         <p><a href="/colour_evolution_interactive">Color Evolution Interactive</a></p>
+        <p><a href="/page_evolution">Page Evolution</a></p>
 
         <h2>Evolution Storage</h2>
         <p><a href="/color_evolution_storage">Color Evolution Storage</a></p>
@@ -47,6 +48,6 @@
         <h2>Tests</h2>
         <p><a href="/color_sort">Colour Sort Test</a></p>
         <p><a href="/element_creation_test">Element Creation Test</a></p>
-        <p><a href="/fullpage_test">Full Page Test</a></p>
+        <p><a href="/element_page_test">Element Page Test</a></p>
     </body>
 </html>
