added an auto refresh meta tag to the image demo (also altered the template so that it could be placed there)

--- a/demos/templates/demos.twig
+++ b/demos/templates/demos.twig
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8"/>
+        {{ meta|raw }}
         <title>Webolution</title>
         <link href='//fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'>
         <style>
