--- a/demos/templates/index.twig
+++ b/demos/templates/index.twig
@@ -35,11 +35,11 @@
         <p><a href="/element_evolution">Element Evolution</a></p>
         <p><a href="/style_evolution">Style Evolution</a></p>
         <p><a href="/colour_evolution_interactive">Color Evolution Interactive</a></p>
-        <p><a href="/page_evolution">Page Evolution</a></p>
         <p><a href="/image_evolution">Image Evolution</a></p>
 
         <h2>Evolution Storage</h2>
         <p><a href="/color_evolution_storage">Color Evolution Storage</a></p>
+        <p><a href="/page_evolution_storage">Page Evolution Storage</a></p>
         <p><a href="/image_evolution_storage">Image Evolution Storage</a></p>
         <p><a href="/element_evolution_storage">Element Evolution Storage</a></p>
 
