--- a/demos/templates/index.twig
+++ b/demos/templates/index.twig
@@ -48,6 +48,7 @@
         <p><a href="/clear_database">Clear Database</a></p>
 
         <h2>Tests</h2>
+        <p><a href="/image">Image Test</a></p>
         <p><a href="/color_sort">Colour Sort Test</a></p>
         <p><a href="/element_creation_test">Element Creation Test</a></p>
         <p><a href="/element_page_test">Element Page Test</a></p>
