changed the way in which styles are stored and rendered in the Page class, then updated the tests to comply with these changes. also moved the page based tests into included files

--- a/demos/templates/index.twig
+++ b/demos/templates/index.twig
@@ -51,7 +51,7 @@
         <p><a href="/image">Image Test</a></p>
         <p><a href="/image_sort">Image Sort Test</a></p>
         <p><a href="/color_sort">Colour Sort Test</a></p>
-        <p><a href="/element_creation_test">Element Creation Test</a></p>
-        <p><a href="/element_page_test">Element Page Test</a></p>
+        <p><a href="/element">Element Test</a></p>
+        <p><a href="/page">Page Test</a></p>
     </body>
 </html>
