--- a/demos/templates/index.twig
+++ b/demos/templates/index.twig
@@ -38,6 +38,10 @@
         <p><a href="/image_evolution">Image Evolution</a></p>
         <p><a href="/page_evolution">Page Evolution</a></p>
 
+        <h2>Evolution Form</h2>
+        <p><a href="/number_evolution_form">Number Evolution Form</a></p>
+        <p><a href="/page_evolution_form">Page Evolution Form</a></p>
+
         <h2>Evolution Storage</h2>
         <p><a href="/color_evolution_storage">Color Evolution Storage</a></p>
         <p><a href="/page_evolution_storage">Page Evolution Storage</a></p>
