Tweaked the styles of the demo application.

--- a/demos/templates/demos.twig
+++ b/demos/templates/demos.twig
@@ -4,20 +4,8 @@
         <meta charset="utf-8"/>
         {{ meta|raw }}
         <title>Webolution</title>
-        <link href='//fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'>
+        <link href="css/styles.css" rel="stylesheet" type="text/css">
         <style>
-            body {
-                margin:10px;
-            }
-            h1 {
-                color: #719e40;
-                letter-spacing: -3px;
-                font-family: 'Lato', sans-serif;
-                font-size: 100px;
-                font-weight: 200;
-                margin-bottom: 0;
-            }
-
             {{ styles }}
         </style>
     </head>
