--- a/demos/templates/index.twig
+++ b/demos/templates/index.twig
@@ -3,26 +3,7 @@
     <head>
         <meta charset="utf-8"/>
         <title>Webolution</title>
-        <link href='//fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'>
-        <style>
-            body {
-                margin: 50px 10px 10px 10px;
-                padding: 0;
-                width: 100%;
-                font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-                color: #aaa;
-                font-size: 18px;
-            }
-
-            h1 {
-                color: #719e40;
-                letter-spacing: -3px;
-                font-family: 'Lato', sans-serif;
-                font-size: 100px;
-                font-weight: 200;
-                margin-bottom: 0;
-            }
-        </style>
+        <link href="css/styles.css" rel="stylesheet" type="text/css">
     </head>
     <body>
         <h1>Webolution</h1>
